fix long ENS wrapping issue as well as placement of trophy on small screens

--- a/packages/nouns-webapp/src/components/BidHistoryModalRow/BidHistoryModalRow.module.css
+++ b/packages/nouns-webapp/src/components/BidHistoryModalRow/BidHistoryModalRow.module.css
@@ -1,42 +1,45 @@
 .bidRow {
-    border-radius: 14px;
-    height: 72px;
-    width: 100%;
-    padding: 1.0rem;
-    margin-top: 0.75rem;
-    border-bottom: 0px;
-    background-color: white;
-  }
+  border-radius: 14px;
+  height: 72px;
+  width: 100%;
+  padding: 1rem;
+  margin-top: 0.75rem;
+  border-bottom: 0px;
+  background-color: white;
+}
 
-  .bidderInfoWrapper {
-    display: flex;
-  }
-  
-  .bidderInfoText {
-    margin-left: 0.5rem;
-    display: inline-block;
-    padding: 0;
-    line-height: 23px;
-  }
-  
-  .bidDate {
-    color: rgba(140, 141, 146, 1);
-    font-weight: 500;
-    font-family: 'PT Root UI';
-    font-size: 13px;
-  }
-  
-  .trophy {
-    margin-left: 0.5rem;
-  }
+.bidderInfoWrapper {
+  display: flex;
+}
 
-  .linkIcon {
-    color: var(--brand-gray-light-text);
-    transition: all 0.125s ease-in-out;
-  }
-  
-  .linkIcon:hover {
-    color: black;
-    cursor: pointer;
-  }
+.bidderInfoText {
+  margin-left: 0.5rem;
+  display: inline-block;
+  padding: 0;
+  line-height: 23px;
+}
 
+.bidDate {
+  color: rgba(140, 141, 146, 1);
+  font-weight: 500;
+  font-family: 'PT Root UI';
+  font-size: 13px;
+}
+
+.trophy {
+  margin-left: 0.5rem;
+}
+
+.linkIcon {
+  color: var(--brand-gray-light-text);
+  transition: all 0.125s ease-in-out;
+}
+
+.linkIcon:hover {
+  color: black;
+  cursor: pointer;
+}
+
+.bidAmount {
+  white-space: nowrap;
+}
